modify subdiv sketch

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Three.js Materials & Textures Study</title>
+    <title>Three.js Learning</title>
   </head>
   <body>
-    <a href="/simple-triangles">Simple Triangles</a>
+    <ul>
+      <li><a href="/simple-triangles">Simple Triangles</a></li>
+      <li><a href="/subdiv">SubdivisionModifier</a></li>
+    </ul>
   </body>
 </html>
