galaxy with shaders

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <ul>
       <li><a href="/simple-triangles">Simple Triangles</a></li>
       <li><a href="/subdiv">SubdivisionModifier</a></li>
+      <li><a href="/spiral-galaxy">Spiral Galaxy</a></li>
     </ul>
   </body>
 </html>
