--- a/simple-triangles/index.html
+++ b/simple-triangles/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Three.js materials & shaders</title>
+    <title>Simple Triangles</title>
   </head>
   <body>
     <div id="container"></div>
