--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <li><a href="/simple-triangles">Simple Triangles</a></li>
       <li><a href="/subdiv">SubdivisionModifier</a></li>
       <li><a href="/spiral-galaxy">Spiral Galaxy</a></li>
+      <li><a href="/noise-sphere">Noise Sphere</a></li>
     </ul>
   </body>
 </html>
